--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -130,13 +130,13 @@
     </div>
     <footer>
         <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="icons/youtube.png" height="32px"
-                width="32px" title="YouTube" alt="YouTube"></a>
+                width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
         <a href="https://soundcloud.com/the-sass-music"><img src="icons/soundcloud.png" height="32px" width="32px"
-                title="SoundCloud" alt="SoundCloud"></a>
+                title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
         <a href="https://github.com/NitroGuy10"><img src="icons/github.png" height="32px" width="32px" title="GitHub"
-                alt="GitHub"></a>
+                alt="GitHub" class="social-icon"></a>
         <a href="https://twitter.com/NitroGuy10"><img src="icons/twitter.png" height="32px" width="32px" title="Twitter"
-                alt="Twitter"></a>
+                alt="Twitter" class="social-icon"></a>
         <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
     </footer>
     <footer id="copyright">&copy; 2021 NitroGuy</footer>
