--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -15,7 +15,22 @@ h1 {
   padding-bottom: 20px;
 }
 h1.long-name {
-  font-size: 120px;
+  font-size: 105px;
+}
+
+h2 {
+  font-size: 75px;
+}
+
+h3 {
+  font-size: 15px;
+  text-align: left;
+}
+
+h4 {
+  font-size: 70px;
+  text-align: left;
+  margin: 0px;
 }
 
 .noscript-heading {
@@ -37,6 +52,30 @@ a.white-link {
   color: inherit;
 }
 
+.download {
+  font-size: 30px;
+  line-height: 10px;
+}
+.download-link {
+  line-height: 35px;
+}
+.download-links {
+  font-size: 20px;
+  line-height: 10px;
+}
+
+.other-links {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.table-links {
+  font-size: 40px;
+  width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .item-name-large {
   font-size: 50px;
   text-align: center;
@@ -46,6 +85,10 @@ a.white-link {
 .single-text {
   font-size: 25px;
   color: #666;
+}
+
+.main-site {
+  font-size: 36px;
 }
 
 #json {
@@ -78,11 +121,39 @@ table {
   width: 100%;
   border-collapse: collapse;
 }
+table.song-table {
+  width: 100%;
+  margin-top: 30px;
+  border-collapse: collapse;
+  background-color: #222222;
+  border-style: solid;
+  border-color: #000000;
+  box-shadow: 2px 2px 10px 2px #000000;
+}
+table.links-table {
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
+  border-collapse: collapse;
+  background-color: #222222;
+  border-style: solid;
+  border-color: #000000;
+  box-shadow: 2px 2px 10px 2px #000000;
+  text-align: center;
+}
 
 td {
   font-size: 30px;
   vertical-align: top;
   border-top: 1px solid #444444;
+}
+td.on-collection-page {
+  padding-top: 30px;
+}
+td#song-desc-1.on-song-page, td#song-desc-2.on-song-page {
+  border-top: none;
+  padding: 12px;
 }
 
 .scroll-table {
@@ -92,8 +163,16 @@ td {
   border: 1px solid #dddddd;
 }
 
+#song-desc-1 {
+  padding-right: 15px;
+}
+
 #music-logo {
   padding-left: 30px;
+}
+
+#cover {
+  margin-bottom: 0px;
 }
 
 .noscript-hr {
@@ -108,7 +187,7 @@ button {
   text-decoration: none;
   display: inline-block;
   font-size: 40px;
-  font-family: "Tomorrow", sans-serif;
+  font-family: Tomorrow, Arial, Helvetica, sans-serif;
   color: #bbbbbb;
   cursor: pointer;
 }
@@ -129,13 +208,25 @@ button.current {
   margin-right: 20%;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1100px) {
   h1 {
     font-size: 20vw;
     line-height: 22vw;
   }
   h1.long-name {
     font-size: 17vw;
+  }
+  h1.music-name {
+    font-size: 14vw;
+  }
+
+  h2, h4 {
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+
+  h3 {
+    font-size: 2.5vw;
   }
 
   p {
@@ -150,8 +241,27 @@ button.current {
     font-size: 5vw;
   }
 
+  .table-links {
+    font-size: 5vw;
+    width: 100%;
+  }
+
+  .download {
+    font-size: 5vw;
+    line-height: 5vw;
+    margin: 5px;
+  }
+
+  .other-links {
+    font-size: 3vw;
+  }
+
   #json {
     font-size: 5vw;
+  }
+
+  .on-collection-page .song-name {
+    font-size: 6vw;
   }
 
   ul.song-bullets {
@@ -167,6 +277,16 @@ button.current {
     height: 25vw;
   }
 
+  .on-song-page .cover-image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .social-icon-scale {
+    width: 5vw;
+    height: 5vw;
+  }
+
   button {
     font-size: 5vw;
     padding: 1vw;
@@ -175,6 +295,9 @@ button.current {
   #content {
     margin-left: 5%;
     margin-right: 5%;
+  }
+  #content.music-page {
+    text-align: left;
   }
 }
 
