--- a/templates/collection.html.jinja
+++ b/templates/collection.html.jinja
@@ -18,16 +18,16 @@
     <link rel="manifest" href="../favicon/site.webmanifest">
 
     <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/music.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/main_sass.css">
 
 </head>
 
 <body>
-    <h1>The Sass</h1>
+    <h1 class="music-name">The Sass</h1>
     <p>
         <button onclick="window.location.href = '../index.html#music'">Back to Site</button>
     </p>
-    <div id="content">
+    <div id="content" class="music-page">
         <h2>{{ collection.name }}</h2>
         <div id="about">
             <p>{{ collection.description }}</p>
@@ -36,7 +36,7 @@
             <table id="songList">
                 {% for song in collection.songs %}
                 <tr class="songInfo" id="{{ song.safeName }}">
-                    <td id="song-desc-1" class="on-collection-page"><strong>{{ song.name }}</strong>
+                    <td id="song-desc-1" class="on-collection-page"><strong class="song-name">{{ song.name }}</strong>
                         <p>{{ song.description }}</p>
                     </td>
                     <td id="song-desc-2" class="on-collection-page">
@@ -65,13 +65,13 @@
     </div>
     <footer>
         <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="../icons/youtube.png" height="32px"
-                width="32px" title="YouTube" alt="YouTube"></a>
+                width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
         <a href="https://soundcloud.com/the-sass-music"><img src="../icons/soundcloud.png" height="32px" width="32px"
-                title="SoundCloud" alt="SoundCloud"></a>
+                title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
         <a href="https://github.com/NitroGuy10"><img src="../icons/github.png" height="32px" width="32px" title="GitHub"
-                alt="GitHub"></a>
+                alt="GitHub" class="social-icon"></a>
         <a href="https://twitter.com/NitroGuy10"><img src="../icons/twitter.png" height="32px" width="32px"
-                title="Twitter" alt="Twitter"></a>
+                title="Twitter" alt="Twitter" class="social-icon"></a>
         <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
     </footer>
     <footer id="copyright">&copy; 2021 NitroGuy</footer>
