--- a/sass/main.sass
+++ b/sass/main.sass
@@ -214,11 +214,14 @@ td
 
 // Images
 
+.cover
+    margin-bottom: 0px
+
+    &-index
+        margin-bottom: 30px
+
 #music-logo
     padding-left: 30px
-
-#cover
-    margin-bottom: 0px
 
 @mixin m-images
     .games-gif
