--- a/templates/collection.html.jinja
+++ b/templates/collection.html.jinja
@@ -7,25 +7,14 @@
 <head>
     <title>The Sass</title>
 
-    <meta charset="UTF-8">
     <meta name="description" content="{{ collection.name }}">
-    <meta name="author" content="NitroGuy/NitroGuy10/The Sass">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
-    <link rel="manifest" href="../favicon/site.webmanifest">
-
-    <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../stylesheets/main_sass.css">
-
+    {{ site.head }}
 </head>
 
 <body>
     <h1 class="music-name">The Sass</h1>
     <p>
-        <button onclick="window.location.href = '../index.html#music'">Back to Site</button>
+        <noscript><a href="../index.html#music"></noscript><button onclick="window.location.href = '../index.html#music'">Back to Site</button><noscript></a></noscript>
     </p>
     <div id="content" class="music-page">
         <h2>{{ collection.name }}</h2>
@@ -40,7 +29,7 @@
                         <p>{{ song.description }}</p>
                     </td>
                     <td id="song-desc-2" class="on-collection-page">
-                        <p id="cover"><a href="../songs/{{ song.safeName }}.html"><img class="cover-image"
+                        <p class="cover"><a href="../songs/{{ song.safeName }}.html"><img class="cover-image"
                                     src="../artwork/{{ song.coverLink }}" width="250" height="250"></a></p>
                         <h3>Released: {{ song.releaseDateFormatted }}</h3>
                         <h3>Genre: {{ song.genre }}</h3>
@@ -63,18 +52,9 @@
 
         </div>
     </div>
-    <footer>
-        <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="../icons/youtube.png" height="32px"
-                width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
-        <a href="https://soundcloud.com/the-sass-music"><img src="../icons/soundcloud.png" height="32px" width="32px"
-                title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
-        <a href="https://github.com/NitroGuy10"><img src="../icons/github.png" height="32px" width="32px" title="GitHub"
-                alt="GitHub" class="social-icon"></a>
-        <a href="https://twitter.com/NitroGuy10"><img src="../icons/twitter.png" height="32px" width="32px"
-                title="Twitter" alt="Twitter" class="social-icon"></a>
-        <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
-    </footer>
-    <footer id="copyright">&copy; 2021 NitroGuy</footer>
+    
+    {{ site.footer }}
+
 </body>
 
 </html>
