--- a/templates/components/footer.html.jinja
+++ b/templates/components/footer.html.jinja
@@ -1,11 +1,11 @@
 <footer>
-    <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="icons/youtube.png" height="32px"
+    <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="{{ path }}icons/youtube.png" height="32px"
             width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
-    <a href="https://soundcloud.com/the-sass-music"><img src="icons/soundcloud.png" height="32px" width="32px"
+    <a href="https://soundcloud.com/the-sass-music"><img src="{{ path }}icons/soundcloud.png" height="32px" width="32px"
             title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
-    <a href="https://github.com/NitroGuy10"><img src="icons/github.png" height="32px" width="32px" title="GitHub"
+    <a href="https://github.com/NitroGuy10"><img src="{{ path }}icons/github.png" height="32px" width="32px" title="GitHub"
             alt="GitHub" class="social-icon"></a>
-    <a href="https://twitter.com/NitroGuy10"><img src="icons/twitter.png" height="32px" width="32px" title="Twitter"
+    <a href="https://twitter.com/NitroGuy10"><img src="{{ path }}icons/twitter.png" height="32px" width="32px" title="Twitter"
             alt="Twitter" class="social-icon"></a>
     <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
 </footer>
