--- a/templates/components/head.html.jinja
+++ b/templates/components/head.html.jinja
@@ -3,12 +3,10 @@
 <meta name="author" content="NitroGuy/NitroGuy10/The Sass">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-<link rel="manifest" href="favicon/site.webmanifest">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ path }}favicon/apple.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ path }}favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ path }}favicon/favicon-16x16.png">
+<link rel="manifest" href="{{ path }}favicon/site.webmanifest">
 
 <link href="https://fonts.googleapis.com/css?family=Tomorrow&display=swap" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="stylesheets/main_sass.css">
-
-<!-- TODO ADD FOLDER PATH TO THESE URLS IN CASE THE FINAL HTML THING IS WITHIN A FOLDER (maybe use a lambda for this?)-->
+<link rel="stylesheet" type="text/css" href="{{ path }}stylesheets/main_sass.css">
