Even more jinja-fication

--- a/templates/components/footer.html.jinja
+++ b/templates/components/footer.html.jinja
@@ -1,14 +1,14 @@
 <footer>
-    <a href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ"><img src="{{ path }}icons/youtube.png" height="32px"
-            width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
-    <a href="https://soundcloud.com/the-sass-music"><img src="{{ path }}icons/soundcloud.png" height="32px" width="32px"
-            title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
-    <a href="https://github.com/NitroGuy10"><img src="{{ path }}icons/github.png" height="32px" width="32px" title="GitHub"
-            alt="GitHub" class="social-icon"></a>
-    <a href="https://twitter.com/NitroGuy10"><img src="{{ path }}icons/twitter.png" height="32px" width="32px" title="Twitter"
-            alt="Twitter" class="social-icon"></a>
-    <div id="email" title="E-Mail">nitroguysm(at)gmail.com</div>
+        <a href="{{ nitroguy.socials.youtube.link }}"><img src="{{ path }}{{ nitroguy.socials.youtube.icon }}"
+                        height="32px" width="32px" title="YouTube" alt="YouTube" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.soundcloud.link }}"><img src="{{ path }}{{ nitroguy.socials.soundcloud.icon }}"
+                        height="32px" width="32px" title="SoundCloud" alt="SoundCloud" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.github.link }}"><img src="{{ path }}{{ nitroguy.socials.github.icon }}"
+                        height="32px" width="32px" title="GitHub" alt="GitHub" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.twitter.link }}"><img src="{{ path }}{{ nitroguy.socials.twitter.icon }}"
+                        height="32px" width="32px" title="Twitter" alt="Twitter" class="social-icon"></a>
+        <a href="{{ nitroguy.socials.newgrounds.link }}"><img src="{{ path }}{{ nitroguy.socials.newgrounds.icon }}"
+                        height="32px" width="32px" title="Newgrounds" alt="Newgrounds" class="social-icon"></a>
+        <div id="email" title="E-Mail">{{ nitroguy.socials.email.address }}</div>
 </footer>
 <footer id="copyright">&copy; 2021 NitroGuy</footer>
-
-<!-- TODO ADD FOLDER PATH TO THESE URLS IN CASE THE FINAL HTML THING IS WITHIN A FOLDER (maybe use a lambda for this?) -->
