--- a/templates/links.html.jinja
+++ b/templates/links.html.jinja
@@ -16,21 +16,24 @@
     <div id="content">
         <table class="links-table">
             <td>
-                <p class="table-links"><img src="icons/youtube.png" width="32" height="32"><a
-                        href="https://youtube.com/TheSassMusic" class="table-links">YouTube</a>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.youtube.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.youtube.link }}" class="table-links">YouTube</a>
                 </p>
                 <hr>
-                <p class="table-links"><img src="icons/soundcloud.png" width="32" height="32"><a
-                        href="https://soundcloud.com/the-sass-music" class="table-links">SoundCloud</a>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.soundcloud.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.soundcloud.link }}" class="table-links">SoundCloud</a>
                 </p>
                 <hr>
-                <p class="table-links"><img src="icons/github.png" width="32" height="32"><a
-                        href="https://github.com/NitroGuy10" class="table-links">GitHub</a>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.github.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.github.link }}" class="table-links">GitHub</a>
                 </p>
                 <hr>
-                <p class="table-links"><img src="icons/twitter.png" width="32" height="32"><a
-                        href="https://twitter.com/NitroGuy10" class="table-links">Twitter</a>
-                <hr>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.twitter.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.twitter.link }}" class="table-links">Twitter</a>
+                    <hr>
+                <p class="table-links"><img src="{{ site.nitroguy.socials.newgrounds.icon }}" width="32" height="32"><a
+                        href="{{ site.nitroguy.socials.newgrounds.link }}" class="table-links">Newgrounds</a>
+                    <hr>
                 <p class="table-links"><a href="index.html" class="table-links">Website</a>
                 </p>
                 <hr>
