--- a/templates/collection.html.jinja
+++ b/templates/collection.html.jinja
@@ -14,7 +14,8 @@
 <body>
     <h1 class="music-name">The Sass</h1>
     <p>
-        <noscript><a href="../index.html#music"></noscript><button onclick="window.location.href = '../index.html#music'">Back to Site</button><noscript></a></noscript>
+        <noscript><a href="../index.html#music"></noscript><button
+            onclick="window.location.href = '../index.html#music'">Back to Site</button><noscript></a></noscript>
     </p>
     <div id="content" class="music-page">
         <h2>{{ collection.name }}</h2>
@@ -52,7 +53,7 @@
 
         </div>
     </div>
-    
+
     {{ site.footer }}
 
 </body>
