--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -14,9 +14,12 @@
 <body onload="start(); window.scrollTo(0, 0)">
     <h1>NitroGuy</h1>
     <p>
-        <noscript><a href="#about"></noscript><button onclick="openTab(0)" id="aboutNavButton">About</button><noscript></a></noscript>
-        <noscript><a href="#music"></noscript><button onclick="openTab(1)" id="musicNavButton">Music</button><noscript></a></noscript>
-        <noscript><a href="#other"></noscript><button onclick="openTab(2)" id="otherNavButton">Other</button><noscript></a></noscript>
+        <noscript><a href="#about"></noscript><button onclick="openTab(0)"
+            id="aboutNavButton">About</button><noscript></a></noscript>
+        <noscript><a href="#music"></noscript><button onclick="openTab(1)"
+            id="musicNavButton">Music</button><noscript></a></noscript>
+        <noscript><a href="#other"></noscript><button onclick="openTab(2)"
+            id="otherNavButton">Other</button><noscript></a></noscript>
     </p>
     <div id="content">
         <div id="about">
@@ -55,67 +58,71 @@
             <p>I produce EDM under the alias "The Sass". My music is all about emotion, fun, and taking the listener on
                 a journey. It's also chock-full of lead solos and major 7s lol.</p>
             <p>If you wanna have a listen, check me out on <a
-                    href="https://www.youtube.com/channel/UCoJpTVMgEBnrF0KzaRZlklQ">YouTube</a> and <a
-                    href="https://soundcloud.com/the-sass-music">SoundCloud</a>.</p>
+                    href="{{ site.nitroguy.socials.youtube.link }}">YouTube</a>, <a
+                    href="{{ site.nitroguy.socials.soundcloud.link }}">SoundCloud</a>, or even <a
+                    href="{{ site.nitroguy.socials.newgrounds.link }}">Newgrounds</a>.</p>
             <p>Or, if you'd prefer, read about story behind each of my tracks (and download them too).</p>
-            <noscript><div class="scroll-table"></noscript>
-                <table>
-                    {% for item in chronological_list %}
-                    {% if "songs" in item %}
-                    <tr>
-                        <td class="item-name-large">
-                            <p class="item-name-large"><a href="collections/{{ item.safeName }}.html">{{ item.name }}</a>
-                            </p>
-                            <ul class="song-bullets">
-                                {% for song in item.songs %}
-                                <li>
-                                    <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
-                                </li>
-                                {% endfor %}
-                            </ul>
-                        </td>
-                        <td>
-                            <p class="cover-index"><a href="collections/{{ item.safeName }}.html"><img class="cover-image"
-                                        src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
-                        </td>
-                    </tr>
-                    {% else %}
-                    <tr>
-                        <td class="item-name-large">
-                            <p class="item-name-large"><a href="songs/{{ item.safeName }}.html">{{ item.name }}</a></p>
-                            <p class="single-text">(Single)</p>
-                        </td>
-                        <td>
-                            <p class="cover-index"><a href="songs/{{ item.safeName }}.html"><img class="cover-image"
-                                        src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
-                        </td>
-                    </tr>
-                    {% endif %}
-                    {% endfor %}
-                    <tr>
-                        <td>
-                            <p id="json"><a
-                                    href="https://github.com/NitroGuy10/nitroguy10.github.io/blob/master/data/song_data.json">
-                                    JSON file with all song info</a></p>
-                        </td>
-                        <td></td>
-                    </tr>
-                </table>
-            <noscript></div></noscript>
-
-        </div>
-        <noscript>
-            <hr class="noscript-hr">
-        </noscript>
-        <div id="other">
             <noscript>
-                <h2 class="noscript-heading">Other</h2>
+                <div class="scroll-table">
             </noscript>
-            <p><a href="games.html">Games</a></p>
-            <p><a href="https://nitroguy10.github.io/ResistorTool/">ResistorTool</a></p>
-            <p><a href="roboplato.html">Neural Network Trained on Plato's Works</a></p>
-            <p><a href="https://nitroguy10.github.io/ClickType/">ClickType</a></p>
-        </div>
+            <table>
+                {% for item in chronological_list %}
+                {% if "songs" in item %}
+                <tr>
+                    <td class="item-name-large">
+                        <p class="item-name-large"><a href="collections/{{ item.safeName }}.html">{{ item.name }}</a>
+                        </p>
+                        <ul class="song-bullets">
+                            {% for song in item.songs %}
+                            <li>
+                                <a href="songs/{{ song.safeName }}.html">{{ song.name }}</a>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                    </td>
+                    <td>
+                        <p class="cover-index"><a href="collections/{{ item.safeName }}.html"><img class="cover-image"
+                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                    </td>
+                </tr>
+                {% else %}
+                <tr>
+                    <td class="item-name-large">
+                        <p class="item-name-large"><a href="songs/{{ item.safeName }}.html">{{ item.name }}</a></p>
+                        <p class="single-text">(Single)</p>
+                    </td>
+                    <td>
+                        <p class="cover-index"><a href="songs/{{ item.safeName }}.html"><img class="cover-image"
+                                    src="artwork/{{ item.coverLink }}" width="200" height="200"></a></p>
+                    </td>
+                </tr>
+                {% endif %}
+                {% endfor %}
+                <tr>
+                    <td>
+                        <p id="json"><a
+                                href="{{ site.nitroguy.socials.github.link }}/nitroguy10.github.io/blob/master/data/song_data.json">
+                                JSON file with all song info</a></p>
+                    </td>
+                    <td></td>
+                </tr>
+            </table>
+            <noscript>
+        </div></noscript>
+
+    </div>
+    <noscript>
+        <hr class="noscript-hr">
+    </noscript>
+    <div id="other">
+        <noscript>
+            <h2 class="noscript-heading">Other</h2>
+        </noscript>
+        <p><a href="games.html">Games</a></p>
+        <p><a href="{{ site.nitroguy.socials.website.link }}/ResistorTool/">ResistorTool</a></p>
+        <p><a href="roboplato.html">Neural Network Trained on Plato's Works</a></p>
+        <p><a href="{{ site.nitroguy.socials.website.link }}/ClickType/">ClickType</a></p>
+    </div>
     </div>
 
     {{ site.footer }}
