--- a/sass/main.sass
+++ b/sass/main.sass
@@ -88,6 +88,10 @@ a
     margin-top: 10px
     margin-bottom: 10px
 
+.collection-link
+    font-size: 35px
+    text-align: center
+
 .table-links
     font-size: 40px
     width: 600px
