Repurposed the "Other" tab

--- a/templates/index.html.jinja
+++ b/templates/index.html.jinja
@@ -30,19 +30,14 @@
             <p>I'm NitroGuy. Currently, I am a human who lives on Earth. My hobbies include programming, producing
                 music, editing videos, playing video games, and sleeping.</p>
             <p>I am highly interested in computer science and software development. Java is
-                without a doubt my best language and the language I have spent the most time with. Recently, I've been
-                working a lot
-                with Processing and making cool graphical things&mdash;something I've never really done before. I have
+                without a doubt my best language and the language I have spent the most time with. I have
                 also been using Python to great extent as of late and I really
-                enjoy coding in it. I've dabbled in JavaScript as well as some game engine
-                scripting languages such as Unity-C# and Godot's GDScript. I also have the teeny tiniest bit of C++
-                knowledge. Finally, I've only had a little bit of experience with
+                enjoy coding in it. I've also had a fair amount of experience working with C#, HTML, CSS, and
+                JavaScript. Finally, I've only had a little bit of experience with
                 building simple circuits to manipulate with microcontrollers but I'm already in love.</p>
-            <p>Video games have been a massive part of my life but I find myself playing them less and less due to lack
-                of time. Some of my all-time favorites include, Minecraft (of course), Factorio,
-                Terraria, Team Fortress 2, and <a href="favorite_games.html" class="white-link">more</a>. As of the
-                time of writing this, I am currently playing a lot
-                of Overwatch.</p>
+            <p>Video games have been a massive part of my life but I hardly ever play them anymore and I want to get
+                back into them! Some of my all-time favorites include Minecraft (of course), Factorio,
+                Terraria, Team Fortress 2, Overwatch, and <a href="favorite_games.html" class="white-link">more</a>.</p>
             <p>I am chronically addicted to music. I love playing, producing, and listening to music. I've loved a
                 variety of genres over the years but right now I am most fixated on Dubstep and EDM in general.</p>
             <p>he/him</p>
@@ -118,10 +113,15 @@
         <noscript>
             <h2 class="noscript-heading">Other</h2>
         </noscript>
-        <p><a href="games.html">Games</a></p>
-        <p><a href="{{ site.nitroguy.socials.website.link }}/ResistorTool/">ResistorTool</a></p>
-        <p><a href="roboplato.html">Neural Network Trained on Plato's Works</a></p>
-        <p><a href="{{ site.nitroguy.socials.website.link }}/ClickType/">ClickType</a></p>
+        <p>I've made a bunch of cool software, plugins, webpages, and other projects which you can find on my <a
+                href="{{ site.nitroguy.socials.github.link }}">GitHub</a>. If you wanna hear my commentary about them,
+            I've made this <a href="projects.html">"blog post" thing</a>.</p>
+        <p>If you're just looking for the highlights, here are some of them:</p>
+        <ul>
+            <li><a href="{{ site.nitroguy.socials.github.link }}/Vegas-Scripts">Plugins/Scripts for VEGAS Pro</a></li>
+            <li><a href="{{ site.nitroguy.socials.github.link }}/ERS-OL">Online Egyptian Rat Screw game</a></li>
+            <li><a href="about_website.html">How this website was made</a> (it's more complex than you might think!)</li>
+        </ul>
     </div>
     </div>
 
