--- a/docs/stylesheets/main_sass.css
+++ b/docs/stylesheets/main_sass.css
@@ -6,6 +6,9 @@ body {
   text-align: center;
   overflow-y: scroll;
 }
+body#article {
+  background-color: #444;
+}
 
 h1 {
   font-size: 150px;
@@ -19,7 +22,11 @@ h1.long-name {
 }
 
 h2 {
-  font-size: 75px;
+  font-size: 60px;
+}
+h2#article-title {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 h3 {
@@ -120,6 +127,10 @@ ul.song-bullets {
 }
 ul.song-bullets li {
   padding-bottom: 8px;
+}
+
+ol {
+  font-size: 25px;
 }
 
 table {
@@ -228,7 +239,16 @@ button.current {
     font-size: 14vw;
   }
 
-  h2, h4 {
+  h2 {
+    font-size: 10vw;
+    line-height: 10vw;
+  }
+  h2#article-title {
+    text-align: center;
+    margin-bottom: 1vw;
+  }
+
+  h4 {
     font-size: 10vw;
     line-height: 10vw;
   }
@@ -274,6 +294,10 @@ button.current {
 
   ul.song-bullets {
     font-size: 5vw;
+  }
+
+  ol {
+    font-size: 3.5vw;
   }
 
   .games-gif {
