--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,6 +12,9 @@ body
     text-align: center
     overflow-y: scroll
 
+    &#article
+        background-color: #444
+
 // Headings
 
 h1
@@ -25,7 +28,11 @@ h1
         font-size: 105px
 
 h2
-    font-size: 75px
+    font-size: 60px
+
+    &#article-title
+            text-align: center
+            margin-bottom: 10px
 
 h3
     font-size: 15px
@@ -54,7 +61,15 @@ h4
         &.music-name
             font-size: 14vw
 
-    h2, h4
+    h2
+        font-size: 10vw
+        line-height: 10vw
+
+        &#article-title
+            text-align: center
+            margin-bottom: 1vw
+    
+    h4
         font-size: 10vw
         line-height: 10vw
     
@@ -164,9 +179,15 @@ ul
         li
             padding-bottom: 8px
 
+ol
+    font-size: 25px
+
 @mixin m-lists
     ul.song-bullets
         font-size: 5vw
+    
+    ol
+        font-size: 3.5vw
 
 // Tables
 
