Finished the website blog post

--- a/templates/about_website.html.jinja
+++ b/templates/about_website.html.jinja
@@ -71,10 +71,10 @@
         </p>
         <img src="images/song_data_json.png" alt="All of my song data is kept in a JSON file" style="width: 50%;">
         <p>
-            Oh yeah, all of the data for my songs is stored in a single JSON file (at least NOW it is *shudders*).
+            Oh yeah, all the data for my songs is stored in a single JSON file (at least NOW it is *shudders*).
             I'm really happy to be doing this as it not only serves as the central database from which my webpages
             gather their info, but it also serves as a formal record of my songs and the information about them.
-            Otherwise I may not remember the release date of certain songs for example, and maybe far in the future I
+            Otherwise, I may not remember the release date of certain songs for example, and maybe far in the future I
             would forget even making some of these songs without seeing them in the JSON file.
         </p>
         <p>
@@ -92,26 +92,52 @@
         <p>
             . . . . . . . . . . . Templating was what I was looking for.
         </p>
+        <img src="images/jinja_template.png" alt="Using Jinja templates was a much cleaner solution"
+            style="width: 90%;">
         <p>
-            Holy cow can your life be such a pain when you don't know the right search term for something. I digress.
-            Now knowing that a t-t-TEMPLATING was what I needed, I got to work making templates for use with <a href="https://jinja.palletsprojects.com/">Jinja</a>.
+            Holy cow can your life be such a pain when you don't know the right search term for something, but I
+            digress.
+            Now knowing that a TEMPLATE ENGINE was what I needed, I got to work making templates for use with <a
+                href="https://jinja.palletsprojects.com/">Jinja</a>. This was the perfect solution for me. Each song
+            page and collection page function exactly the same, so it made perfect sense to make ONE template for
+            "songs" and one for "collections" and render them multiple times. I could even (finally) properly read the
+            data from a JSON file with Python and fill in the templates using a "for-each" situation.
+        </p>
+        <img src="images/python_jinja_rendering.png"
+            alt="My Jinja templates are rendered in a Python script using data from a JSON file" style="width: 80%;">
+        <p>
+            So that's how I arrived at this solution for my website. I <em>"compile"</em> the site if I decide to update
+            something and the changes automatically cascade to all the affected files&mdash;minimal effort on my part.
+            This also opened the door to even more Jinja-fication. I could turn this site's footer into its own
+            template. What about the &lt;head&gt; tag? Template. With the JSON files, I could store not just song info,
+            but general data for this site. What if I changed my Twitter account some day? Well, I could put all my
+            social media links into a JSON file and fill them in with Jinja. I even did that with the tuscon link you
+            saw earlier!
         </p>
         <img src="images/sass_mixins.png" alt="I use mixins in Sass to make managing media queries easier and cleaner"
             style="width: 40%;">
         <p>
-            I don't think I'm necessarily using Sass for its <em>intended, intended</em> purpose nor I think I really
-            NEED to use it but I am anyway.
+            Compiling this website with a script also made using a CSS preprocessor more accessible.
+            I don't think I'm necessarily using <a href="https://sass-lang.com/">Sass</a> for its <em>intended,
+                intended</em> purpose nor I think I really NEED to use it, but I am anyway.
             Sass is certainly nicer syntactically than CSS and it's got a bunch of features that I'm not using.
-            The "@include" thing that the above picture shows is ABSOLUTELY not the intended use for mixins but the way
+            The "@include" thing that the above picture shows is ABSOLUTELY not the intended use for mixins, but the way
             I use them has actually helped make managing the media queries for the stylesheet much easier.
             I don't really have much else to say on the stylesheet front except that CSS is annoying and very useful and
             media queries are annoying and very useful.
         </p>
-        <p></p>
+        <p>
+            Ok, I might have gone a little overboard but I really am very happy with the way my website is set up
+            internally. Stylistically? Eh, I think it could use some work but it's serviceable and works for me.
+            At the end of the day, I did what I set out to accomplish. If I release a new song, I add its info to the
+            JSON file and the rest of the site updates accordingly. I hope you enjoyed reading about the evolution of my
+            website! This whole experience has taught me a lot about web design and lots more about how to do web design
+            by doing lots of not-web-design.
+        </p>
     </div>
 
     <footer>
-        <a class="main-site" href="../index.html#music">Main Site</a>
+        <a class="main-site" href="index.html">Main Site</a>
     </footer>
 
     {{ site.footer }}
